--- a/box/Dockerfile
+++ b/box/Dockerfile
@@ -8,4 +8,4 @@ FROM novobidevops/odoo:14
 # Example 2
 # COPY python3-requirements.txt /etc/
 # RUN pip3 install --no-cache-dir -r /etc/python3-requirements.txt
-# RUN rm /etc/python3-requirements.txt)0))
+# RUN rm /etc/python3-requirements.txt
