Update for Odoo 15

--- a/box/Dockerfile
+++ b/box/Dockerfile
@@ -1,11 +1,15 @@
-FROM novobidevops/odoo:14
-# FROM novobidevops/odoo:13
-# FROM novobidevops/odoo:12
+# Build a new image based on:
+# FROM novobidevops/odoo:15
+#      novobidevops/odoo:14
+#      novobidevops/odoo:13
+#      novobidevops/odoo:12
 
-# Example 1
+FROM novobidevops/odoo:14
+
+# Example 1: Install new python libs in the new image
 # RUN pip3 install --no-cache-dir paramiko
 
-# Example 2
+# Example 2: Install new python libs from the requirement file
 # COPY python3-requirements.txt /etc/
 # RUN pip3 install --no-cache-dir -r /etc/python3-requirements.txt
 # RUN rm /etc/python3-requirements.txt
