--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,22 @@ version: "3.9"
 
 services:
   odoo:
+    # Chage Odoo version image:
+    #   image: novobidevops/odoo:[odoo_version]
+    # Available [odoo_version]: 10, 11, 12, 13, 14, 15
+
     image: novobidevops/odoo:14
-    # If developer want to use their own Docker environment, Do the following actions : 
-    # + comment line #5 
-    # + uncomment line #11. 
-    # + Make adjustment on file ./box/Dockerfile
-    
     # build: ./box
+
+    # If developer want to use their own Docker environment, Do the following actions : 
+    #
+    # + comment line #9 
+    # + uncomment line #10. 
+    # + Make adjustment on file ./box/Dockerfile
+    #
+    # After docker-compose up, a new docker image will be built 
+    # with the new adjustments on the file ./box/Dockerfile
+    
     ports:
       - "8069:8069"
     volumes:
