--- a/box/odoo_nginx.conf
+++ b/box/odoo_nginx.conf
@@ -1,37 +1,50 @@
-upstream odoo_upstream{
-        server odoo:8069;
+upstream odoo {
+	server odoo:8069;
 }
 
-upstream odoo_upstream_poll{
-        server odoo:8072;
+upstream odoochat {
+	server odoo:8072;
+}
+
+map $http_upgrade $connection_upgrade {  
+	default upgrade;
+	''      close;
 }
 
 server {
-  listen *:80;
+	listen *:80;
 
-  client_max_body_size 1000m;
+	client_max_body_size 1000m;
 
-  proxy_read_timeout    480;
-  proxy_connect_timeout 300;
- proxy_set_header X-Forwarded-Host $host;
- proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
- proxy_set_header X-Forwarded-Proto $scheme;
- proxy_set_header X-Real-IP $remote_addr;
+	proxy_read_timeout    480s;
+	proxy_connect_timeout 300s;
 
-  location / {
-       proxy_pass http://odoo_upstream;
-  }
+	proxy_set_header X-Forwarded-Host $host;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	proxy_set_header X-Forwarded-Proto $scheme;
+	proxy_set_header X-Real-IP $remote_addr;
+	
+	location / {
+		proxy_pass http://odoo;
+		proxy_redirect off;
+	}
 
-  location /longpolling {
-       proxy_pass http://odoo_upstream_poll;
-   }
+	location /websocket {
+		proxy_pass http://odoochat;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection $connection_upgrade;
+		proxy_set_header X-Forwarded-Host $host;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header X-Real-IP $remote_addr;
+	}
 
-  location /nginx_status {
-        stub_status;
+	location /nginx_status {
+		stub_status;
 
-        access_log off;
-        allow all;
-    }
+		access_log off;
+		allow all;
+	}
 
     add_header  X-Robots-Tag "noindex, nofollow, nosnippet, noarchive";
 }
