--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   odoo:
     # Chage Odoo version image:
     #   image: novobidevops/odoo:[odoo_version]
-    # Available [odoo_version]: 10, 11, 12, 13, 14, 15
+    # Available [odoo_version]: 16
 
-    image: novobidevops/odoo:14
+    image: novobidevops/odoo:16
     # build: ./box
 
     # If developer want to use their own Docker environment, Do the following actions : 
@@ -29,7 +29,6 @@ services:
       START_ODOO: "/opt/odoo/odoo/odoo-bin -c /opt/odoo/odoo.conf"
       ODOO_PARAM: ""
     depends_on:
-      - nginx
       - postgres
     restart: unless-stopped
     tty: true
@@ -39,10 +38,12 @@ services:
       - "80:80"
     volumes:
       - ./box/odoo_nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - odoo
     restart: unless-stopped
     tty: true
   postgres:
-    image: postgres:10
+    image: postgres:${POSTGRES_VERSION:-13}
     ports:
       - "5432:5432"
     volumes:
