--- a/odoo.conf
+++ b/odoo.conf
@@ -1,6 +1,7 @@
 [options]
 db_host = postgres
 db_port = 5432
-db_user= odoo
-db_password= odoo
+db_user = odoo
+db_password = odoo
 addons_path = /opt/odoo/odoo/addons,/opt/odoo/enterprise,/opt/odoo/customized_addons
+proxy_mode = True
