--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -23,10 +23,10 @@ services:
       - "8888:8888"
     volumes:
       - ./:/opt/odoo
-      - odoo_data:/root/.local/share/Odoo
+      - odoo_data:/home/odoo/.local/share/Odoo
     command: bash -c "$${PYTHON_PATH} $${DEBUG_ODOO} $${START_ODOO} $${ODOO_PARAM} && tail -f /dev/null"
     environment:
-      PYTHON_PATH: "/usr/local/bin/python3"
+      PYTHON_PATH: "/usr/bin/python3"
       DEBUG_ODOO: "-m debugpy --listen 0.0.0.0:8888"
       START_ODOO: "/opt/odoo/odoo/odoo-bin -c /opt/odoo/odoo.conf"
       ODOO_PARAM: ""
