--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     #   image: novobidevops/odoo:[odoo_version]
     # Available [odoo_version]: 16
 
-    image: novobidevops/odoo:16
+    image: odoo:15-rsyslog
     # build: ./box
 
     # If developer want to use their own Docker environment, Do the following actions : 
@@ -25,23 +25,25 @@ services:
       - odoo_data:/home/odoo/.local/share/Odoo
     command: bash -c "$${PYTHON_PATH} $${START_ODOO} $${ODOO_PARAM} && tail -f /dev/null"
     environment:
-      PYTHON_PATH: "/usr/bin/python3"
+      PYTHON_PATH: "/usr/local/bin/python3"
       START_ODOO: "/opt/odoo/odoo/odoo-bin -c /opt/odoo/odoo.conf"
       ODOO_PARAM: ""
     depends_on:
       - postgres
     restart: unless-stopped
     tty: true
-  nginx:
-    image: nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./box/odoo_nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - odoo
-    restart: unless-stopped
-    tty: true
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+  # nginx:
+  #   image: nginx
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./box/odoo_nginx.conf:/etc/nginx/conf.d/default.conf
+  #   depends_on:
+  #     - odoo
+  #   restart: unless-stopped
+  #   tty: true
   postgres:
     image: postgres:${POSTGRES_VERSION:-13}
     ports:
