--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,19 +4,21 @@
         {
             "type": "shell",
             "label": "debug-odoo",
-            "command": "docker-compose kill odoo; docker-compose -f docker-compose.debug.yml up -d; sleep 2",
+            "command": "docker compose kill odoo; docker compose -f docker-compose.debug.yml up -d; sleep 2",
             "presentation": {
                 "reveal": "always",
-                "panel": "dedicated"
+                "panel": "dedicated",
+                "close": true
             }
         },
         {
             "type": "shell",
             "label": "re-run-odoo",
-            "command": "docker-compose kill odoo; docker-compose -f docker-compose.yml up -d",
+            "command": "docker compose kill odoo; docker compose -f docker-compose.yml up -d",
             "presentation": {
                 "reveal": "always",
-                "panel": "dedicated"
+                "panel": "dedicated",
+                "close": true
             }
         }
     ]
