--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,7 @@ version: "3.9"
 
 services:
   odoo:
-    # Chage Odoo version image:
-    #   image: novobidevops/odoo:[odoo_version]
-    # Available [odoo_version]: 16
-
-    image: novobidevops/odoo:16
+    image: novobidevops/docker-base:odoo-17-v0.1.0
     # build: ./box
 
     # If developer want to use their own Docker environment, Do the following actions : 
@@ -22,10 +18,10 @@ services:
       - "8069:8069"
     volumes:
       - ./:/opt/odoo
-      - odoo_data:/home/odoo/.local/share/Odoo
+      - odoo_data:/var/lib/odoo
     command: bash -c "$${PYTHON_PATH} $${START_ODOO} $${ODOO_PARAM} && tail -f /dev/null"
     environment:
-      PYTHON_PATH: "/usr/bin/python3"
+      PYTHON_PATH: "python3"
       START_ODOO: "/opt/odoo/odoo/odoo-bin -c /opt/odoo/odoo.conf"
       ODOO_PARAM: ""
     depends_on:
@@ -43,7 +39,7 @@ services:
     restart: unless-stopped
     tty: true
   postgres:
-    image: postgres:${POSTGRES_VERSION:-13}
+    image: postgres:${POSTGRES_VERSION:-14}
     ports:
       - "5432:5432"
     volumes:
