--- a/box/Dockerfile
+++ b/box/Dockerfile
@@ -1,17 +1,11 @@
-# Build a new image based on:
-# FROM novobidevops/odoo:15
-#      novobidevops/odoo:14
-#      novobidevops/odoo:13
-#      novobidevops/odoo:12
-
-FROM novobidevops/odoo:16
+FROM novobidevops/docker-base:odoo-17-v0.1.0
 
 # Example 1: Install new python libs in the new image
 # RUN pip3 install --no-cache-dir paramiko
 
 # Example 2: Install new python libs from the requirement file
 # USER root
-# COPY python3-requirements.txt /etc/
-# RUN pip3 install --no-cache-dir -r /etc/python3-requirements.txt
-# RUN rm /etc/python3-requirements.txt
+# COPY requirements.txt /etc/requirements.txt
+# RUN pip install --no-cache-dir -r /etc/requirements.txt
+# RUN rm /etc/requirements.txt
 # USER odoo
