--- a/odoo.conf
+++ b/odoo.conf
@@ -5,3 +5,5 @@ db_user = odoo
 db_password = odoo
 addons_path = /opt/odoo/odoo/addons,/opt/odoo/enterprise,/opt/odoo/customized_addons
 proxy_mode = True
+data_dir = /var/lib/odoo
+logfile = /opt/odoo/odoo.log
