--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,6 @@
-version: "3.9"
-
 services:
   odoo:
-    image: novobidevops/docker-base:odoo-17-v0.1.0
-    # build: ./box
-
-    # If developer want to use their own Docker environment, Do the following actions : 
-    #
-    # + comment line #9 
-    # + uncomment line #10. 
-    # + Make adjustment on file ./box/Dockerfile
-    #
-    # After docker-compose up, a new docker image will be built 
-    # with the new adjustments on the file ./box/Dockerfile
+    build: ./
 
     ports:
       - "8069:8069"
@@ -27,19 +15,17 @@ services:
     depends_on:
       - postgres
     restart: unless-stopped
-    tty: true
   nginx:
     image: nginx
     ports:
       - "80:80"
     volumes:
-      - ./box/odoo_nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./odoo_nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - odoo
     restart: unless-stopped
-    tty: true
   postgres:
-    image: postgres:${POSTGRES_VERSION:-14}
+    image: postgres:14
     ports:
       - "5432:5432"
     volumes:
@@ -49,7 +35,6 @@ services:
       POSTGRES_DB: postgres
       POSTGRES_USER: odoo
       POSTGRES_PASSWORD: odoo
-    tty: true
 
 volumes:
   odoo_data:
