--- a/odoo.conf
+++ b/odoo.conf
@@ -3,7 +3,10 @@ db_host = postgres
 db_port = 5432
 db_user = odoo
 db_password = odoo
-addons_path = /opt/odoo/odoo/addons,/opt/odoo/enterprise,/opt/odoo/customized_addons
 proxy_mode = True
 data_dir = /var/lib/odoo
 logfile = /opt/odoo/odoo.log
+
+addons_path = /opt/odoo/odoo/addons,
+    /opt/odoo/enterprise,
+    /opt/odoo/customized_addons
