--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,4 +1,5 @@
 services:
+
   odoo:
     build: ./
 
@@ -8,7 +9,7 @@ services:
     volumes:
       - ./:/opt/odoo
       - odoo_data:/var/lib/odoo
-    command: bash -c "$${PYTHON_PATH} $${DEBUG_ODOO} $${START_ODOO} $${ODOO_PARAM} && tail -f /dev/null"
+    command: bash -c "$${PYTHON_PATH} $${DEBUG_ODOO} $${START_ODOO} $${ODOO_PARAM}"
     environment:
       PYTHON_PATH: "python3"
       DEBUG_ODOO: "-m debugpy --listen 0.0.0.0:8888"
@@ -17,15 +18,17 @@ services:
     depends_on:
       - postgres
     restart: unless-stopped
-  nginx:
-    image: nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./odoo_nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - odoo
-    restart: unless-stopped
+
+  # nginx:
+  #   image: nginx
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./odoo_nginx.conf:/etc/nginx/conf.d/default.conf
+  #   depends_on:
+  #     - odoo
+  #   restart: unless-stopped
+
   postgres:
     image: postgres:16
     ports:
@@ -34,7 +37,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
     environment:
-      POSTGRES_DB: postgres
+      POSTGRES_DB: barton
       POSTGRES_USER: odoo
       POSTGRES_PASSWORD: odoo
 
